objects/SVProduct__c.object
<CustomObject>
    <description>Custom Products</description>
    <fields>
        <fullName>Name__c</fullName>
        <description>Product Name</description>
        <label>Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is product active</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>SVProduct</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SVProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>